Fix an alignment issue to show drop-down arrow

--- a/src/index.styl
+++ b/src/index.styl
@@ -27,7 +27,7 @@
     outline: 0;
 }
 .dropdown-toggle .caret {
-    float: right;
+    vertical-align: top;
     margin-top: 8px;
     margin-right: 0;
     margin-bottom: 8px;
